--- a/FirstDemoTest/app/build.gradle
+++ b/FirstDemoTest/app/build.gradle
@@ -20,8 +20,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile files('libs/Baidu-Frontia-Android-2.0.5.jar')
+    compile files('libs/jpush-sdk-release1.7.0.jar')
+    compile files('libs/libammsdk.jar')
+    compile files('libs/locSDK_4.1.jar')
+    compile files('libs/universal-image-loader-1.9.1-with-sources.jar')
+    compile files('libs/svn2924_open_sdk.jar')
 }
