--- a/WifiSocket/app/src/main/AndroidManifest.xml
+++ b/WifiSocket/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.android.wifi.socket.Activity.MainActivity">
+        <activity android:name="com.android.wifi.socket.Activity.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
