--- a/WifiSocket/app/src/main/AndroidManifest.xml
+++ b/WifiSocket/app/src/main/AndroidManifest.xml
@@ -23,12 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.android.wifi.socket.Activity.WifControlActivity"/>
-        <receiver android:name="com.android.wifi.socket.receive.WifiBroadcastReceiver">
-            <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
+        <service android:enabled="true" android:name="com.android.wifi.socket.service.WifiConnectService" />
     </application>
 
 </manifest>
