--- a/WifiSocket/app/src/main/AndroidManifest.xml
+++ b/WifiSocket/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:persistent="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.android.wifi.socket.Activity.MainActivity"
             android:launchMode="singleTask">
@@ -23,7 +24,16 @@
             </intent-filter>
         </activity>
         <activity android:name="com.android.wifi.socket.Activity.WifControlActivity"/>
-        <service android:enabled="true" android:name="com.android.wifi.socket.service.WifiConnectService" />
+        <service android:name="com.android.wifi.socket.service.WifiConnectService"
+            android:enabled="true"/>
+        <receiver android:name="com.android.wifi.socket.recieve.WifiBroadcastReciever">
+            <intent-filter>
+                <action android:name="arui.alarm.action" />
+            </intent-filter>
+        </receiver>
+
+
+
     </application>
 
 </manifest>
