--- a/WifiSocket/app/build.gradle
+++ b/WifiSocket/app/build.gradle
@@ -20,7 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile files('src/lib/slidingmenulibary.jar')
+    compile files('src/lib/universal-image-loader-1.9.1-with-sources.jar')
 }
