--- a/HeadControl/app/src/main/AndroidManifest.xml
+++ b/HeadControl/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activity.MapActivity" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+        >
+        <activity
+            android:name=".activity.MapActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
