update for mapfragment

--- a/HeadControl/app/src/main/AndroidManifest.xml
+++ b/HeadControl/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:enabled="true"
             android:exported="true"></service>
 
+        <activity
+            android:name=".activity.TestActivity"
+            android:label="@string/title_activity_test"></activity>
     </application>
 
 </manifest>
