--- a/LaserRadar/HeadControl/app/build.gradle
+++ b/LaserRadar/HeadControl/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.android.jdrd.headcontrol"
         minSdkVersion 10
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 468
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -17,12 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main {
-            assets.srcDirs = ['src/main/assets', 'src/main/assets/']
-            jniLibs.srcDirs = ['libs']
-        }
-    }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/']
+        jniLibs.srcDirs = ['libs']
+    } }
 }
 
 dependencies {
