--- a/LaserRadar/HeadControl/app/build.gradle
+++ b/LaserRadar/HeadControl/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 24
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.android.jdrd.headcontrol"
         minSdkVersion 10
         targetSdkVersion 25
         versionCode 470
         versionName "1.0.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -28,6 +28,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
-    testCompile 'junit:junit:4.12'
+    //    testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.0'
 }
