--- a/LaserRadar/HeadControl/build.gradle
+++ b/LaserRadar/HeadControl/build.gradle
@@ -6,7 +6,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,7 +13,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        maven { url 'http://repo1.maven.org/maven2' }
     }
 }
 
