--- a/LaserRadar/Robot/app/src/main/AndroidManifest.xml
+++ b/LaserRadar/Robot/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".activity.DeskConfigPathAcitivty"/>
         <activity android:name=".activity.RobotConfigActivity"/>
         <activity android:name=".activity.RobotActivity"/>
+        <activity android:name=".activity.CommandAcitivty"/>
         <service
             android:name=".service.SetStaticIPService"
             android:enabled="true"
