--- a/LaserRadar/Robot/app/src/main/AndroidManifest.xml
+++ b/LaserRadar/Robot/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         android:supportsRtl="true"
         android:label="@string/app_name"
         >
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.MainActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
