--- a/LaserRadar/Robot/app/src/main/AndroidManifest.xml
+++ b/LaserRadar/Robot/app/src/main/AndroidManifest.xml
@@ -27,13 +27,18 @@
         android:supportsRtl="true"
         android:label="@string/app_name"
         >
-        <activity android:name=".activity.MainActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".activity.WelcomeActivity"
+            android:theme="@style/AppWelcome"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.MainActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait">
         </activity>
         <activity android:name=".activity.DeskConfigPathAcitivty"/>
         <activity android:name=".activity.RobotConfigActivity"/>
