update for dialog

--- a/LaserRadar/Robot/app/src/main/AndroidManifest.xml
+++ b/LaserRadar/Robot/app/src/main/AndroidManifest.xml
@@ -57,5 +57,9 @@
             android:name=".service.ServerSocketUtil"
             android:enabled="true"
             android:exported="true" />
+        <service
+            android:name=".service.ClientSocketUtil"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 </manifest>
