update for icon and release

--- a/LaserRadar/RobotClientUdp/app/src/main/AndroidManifest.xml
+++ b/LaserRadar/RobotClientUdp/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <application
         android:allowBackup="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/appicon"
         android:supportsRtl="true"
         android:label="@string/app_name"
         >
