--- a/LaserRadar/RobotClientUdp/app/build.gradle
+++ b/LaserRadar/RobotClientUdp/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "com.android.jdrd.robotclient"
+        applicationId "com.android.jdrd.robotclientudp"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
