--- a/RecorderPlay/ScreenRecorder/app/src/main/AndroidManifest.xml
+++ b/RecorderPlay/ScreenRecorder/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="net.yrom.screenrecorder">
+    package="net.android.screenrecorder">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -18,22 +18,22 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
-        android:name=".application.MyApplication"
+        android:name="net.yrom.screenrecorder.application.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activity.ScreenRecordActivity"
+            android:name="net.yrom.screenrecorder.ui.activity.ScreenRecordActivity"
             android:label="@string/app_name" />
 
         <service
-            android:name=".service.ScreenRecordListenerService"
+            android:name="net.yrom.screenrecorder.service.ScreenRecordListenerService"
             android:enabled="true"
             android:exported="false" />
 
         <activity
-            android:name=".ui.activity.LaunchActivity"
+            android:name="net.yrom.screenrecorder.ui.activity.LaunchActivity"
             android:theme="@style/Base.Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,7 +42,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.CameraActivity"
+            android:name="net.yrom.screenrecorder.ui.activity.CameraActivity"
             android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
