--- a/zb_Robot/app/src/main/AndroidManifest.xml
+++ b/zb_Robot/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.SJX_LaunchActivity"
+            android:name=".activity.ZB_LaunchActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +37,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SJX_MainActivity">
+        <activity android:name=".activity.ZB_MainActivity">
 
             <!-- android:configChanges="orientation|keyboardHidden" -->
             <!-- android:screenOrientation="portrait" -->
@@ -45,53 +45,53 @@
         </activity>
         <!-- 设置指令 -->
         <activity
-            android:name=".activity.SJX_DeskConfigPathActivity"
+            android:name=".activity.ZB_DeskConfigPathActivity"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 机器人编辑页面 -->
         <activity
-            android:name=".activity.SJX_RobotConfigActivity"
+            android:name=".activity.ZB_RobotConfigActivity"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 机器人状态 -->
         <activity
-            android:name=".activity.SJX_RobotActivity"
+            android:name=".activity.ZB_RobotActivity"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 编辑命令 -->
         <activity
-            android:name=".activity.SJX_CommandActivity"
+            android:name=".activity.ZB_CommandActivity"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 系统卡列表 -->
         <activity
-            android:name=".activity.SJX_CardConfig"
+            android:name=".activity.ZB_CardConfig"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 系统卡编辑页面 -->
         <activity
-            android:name=".activity.SJX_CardConfigActivity"
+            android:name=".activity.ZB_CardConfigActivity"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 系统卡列表 -->
         <activity
-            android:name=".activity.SJX_AreaConfig"
+            android:name=".activity.ZB_AreaConfig"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 目标设置 -->
         <activity
-            android:name=".activity.SJX_CoordinateConfigActivity"
+            android:name=".activity.ZB_CoordinateConfigActivity"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <activity
-            android:name=".activity.SJX_AreaRedact"
+            android:name=".activity.ZB_AreaRedact"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <activity
-            android:name=".activity.SJX_ImageChoose"
+            android:name=".activity.ZB_ImageChoose"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <activity
-            android:name=".activity.SJX_ShowImage"
+            android:name=".activity.ZB_ShowImage"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 遥控器 -->
         <activity
-            android:name=".activity.SJX_RoundActivity"
+            android:name=".activity.ZB_RoundActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!--登陆界面-->
         <activity
-            android:name=".activity.SJX_LoginActivity"
+            android:name=".activity.ZB_LoginActivity"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
         <!-- 静态IP服务 -->
         <service
