--- a/zb_Robot/app/src/main/AndroidManifest.xml
+++ b/zb_Robot/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".activity.ZB_MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/sjx_logo"
         android:label="@string/app_name"
