--- a/zb_Robot/app/build.gradle
+++ b/zb_Robot/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion '28.0.0'
     defaultConfig {
-        applicationId "com.android.zbrobot"
+        applicationId 'com.android.zbrobot'
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
@@ -19,6 +19,8 @@ android {
     }
     lintOptions {
         disable "ResourceType"
+    }
+    productFlavors {
     }
 }
 
