--- a/AndroidLauncher/app/src/main/AndroidManifest.xml
+++ b/AndroidLauncher/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.android.androidlauncher">
+    package="com.android.androidlauncher"
+    android:sharedUserId="android.uid.system"
+    >
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
-
     <uses-permission android:name="android.permission.REORDER_TASKS" />
 
     <application
