--- a/AndroidLauncher/app/src/main/AndroidManifest.xml
+++ b/AndroidLauncher/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name=".activity.LauncherApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/background"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -25,6 +25,8 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <service android:name=".Service.BackWackService"/>
