--- a/zb_Robot/app/src/main/AndroidManifest.xml
+++ b/zb_Robot/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <application
         android:name=".activity.ZB_MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/sjx_logo"
+        android:icon="@mipmap/zb_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
