--- a/AndroidLauncher/app/src/main/AndroidManifest.xml
+++ b/AndroidLauncher/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name=".activity.LauncherApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/background"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -29,7 +29,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <service android:name=".Service.BackWackService"/>
+        <service android:name=".Service.BackWackService"
+            tools:ignore="InnerclassSeparator" />
     </application>
 
 </manifest>
