--- a/Lottery/app/build.gradle
+++ b/Lottery/app/build.gradle
@@ -22,17 +22,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    testCompile 'junit:junit:4.12'
-    compile files('libs/android-async-http-1.4.4.jar')
-    compile files('libs/Baidu-Frontia-Android-2.0.5.jar')
-    compile files('libs/jpush-sdk-release1.7.0.jar')
-    compile files('libs/libammsdk.jar')
-    compile files('libs/locSDK_4.1.jar')
-    compile files('libs/universal-image-loader-1.9.1-with-sources.jar')
-    compile files('libs/slidingmenulibary.jar')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    testImplementation 'junit:junit:4.12'
+    implementation files('libs/android-async-http-1.4.4.jar')
+    implementation files('libs/Baidu-Frontia-Android-2.0.5.jar')
+    implementation files('libs/jpush-sdk-release1.7.0.jar')
+    implementation files('libs/libammsdk.jar')
+    implementation files('libs/locSDK_4.1.jar')
+    implementation files('libs/universal-image-loader-1.9.1-with-sources.jar')
+    implementation files('libs/slidingmenulibary.jar')
 }
