--- a/MyLauncherWeb/app/src/main/AndroidManifest.xml
+++ b/MyLauncherWeb/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:hardwareAccelerated="true"
         android:largeHeap="true"
         android:allowBackup="true"
-        android:icon="@mipmap/icon_browser_96"
+        android:icon="@mipmap/android_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
