--- a/Ijkplayer/app/build.gradle
+++ b/Ijkplayer/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.android.jdrd.ijkplayer"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -20,23 +19,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.5.1'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.5.1'
+    api 'tv.danmaku.ijk.media:ijkplayer-java:0.5.1'
+    api 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.5.1'
 
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.5.1'
-    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.5.1'
-    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.5.1'
-    compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.5.1'
+    api 'tv.danmaku.ijk.media:ijkplayer-armv5:0.5.1'
+    api 'tv.danmaku.ijk.media:ijkplayer-arm64:0.5.1'
+    api 'tv.danmaku.ijk.media:ijkplayer-x86:0.5.1'
+    api 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.5.1'
 
-    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.5.1'
+    api 'tv.danmaku.ijk.media:ijkplayer-exo:0.5.1'
 
 }
