--- a/MyLauncherWeb/app/src/main/AndroidManifest.xml
+++ b/MyLauncherWeb/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.youkes.browser">
+    package="com.youkes.browser"
+    >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- 允许程序访问有关的网络信息 -->
