--- a/cultraview/VirtualKey/build.gradle
+++ b/cultraview/VirtualKey/build.gradle
@@ -81,10 +81,9 @@ ext {
     versionName = "1.0"
 
     // 配置密钥
-    storeFile = "../bql.keystore"
-    storePassword = "xiange"
-    keyAlias = "ebox"
-    keyPassword = "xiange"
+    storeFile = "../my_8386.jks"
+    storePassword = "123456"
+    keyAlias = "android"
+    keyPassword = "123456"
     var = '26.0.0-alpha1'
 }
-
