--- a/cultraview/NewSettings/app/src/main/AndroidManifest.xml
+++ b/cultraview/NewSettings/app/src/main/AndroidManifest.xml
@@ -236,6 +236,21 @@
                 android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
                 android:value="true" />
         </activity>
+        <activity android:name=".security.permission.AppRestrictionsActivity"
+            android:exported="true"
+            android:taskAffinity="">
+            <intent-filter android:priority="1">
+                <action android:name="android.settings.MANAGE_UNKNOWN_APP_SOURCES" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="1">
+                <action android:name="android.settings.MANAGE_UNKNOWN_APP_SOURCES" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".general.HdmiOutActivity">
+        </activity>
     </application>
 
 </manifest>
