--- a/cultraview/easytouch/app/build.gradle
+++ b/cultraview/easytouch/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.ctv.easytouch"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
 
     buildTypes {
@@ -32,7 +32,20 @@ android {
 //    dependencies {
 //        compileOnly files("${SDK_DIR}/platforms/android-21/data/layoutlib.jar")
 //    }
-
+    signingConfigs {
+//        release {
+//            storeFile file("G:/APP/easytouch/my_8386.jks")
+//            storePassword '123456'
+//            keyAlias 'my_8386'
+//            keyPassword '123456'
+//        }
+        debug {
+            storeFile file("../my_8386.jks")
+            storePassword '123456'
+            keyAlias 'android'
+            keyPassword '123456'
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
