--- a/cultraview/NewSettings/app/src/main/AndroidManifest.xml
+++ b/cultraview/NewSettings/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.REAL_GET_TASKS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" >
     </uses-permission>
     <uses-permission android:name="android.permission.RESTART_PACKAGES" />
