[what]8386 批注更新增加中间件
Signed-off-by: xuzemin <xuzemin@live.cn>

--- a/cultraview/Annotation/app/build.gradle
+++ b/cultraview/Annotation/app/build.gradle
@@ -136,4 +136,5 @@ dependencies {
     implementation files('libs\\itextpdf5.4.3.jar')
     implementation files('libs\\zxing.jar')
     implementation files('libs\\mysdklibrary-release.aar')
+    implementation files('libs/hhtapi.jar')
 }
