--- a/cultraview/WhiteBoard_mStar8386/app/src/main/AndroidManifest.xml
+++ b/cultraview/WhiteBoard_mStar8386/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <uses-library android:name="com.cultraview.tv" />
+        <uses-library android:name="com.mstar.android" />
+        <uses-library android:name="com.hht.android.sdk" />
         <activity
             android:name="com.mphotool.whiteboard.activity.MainActivity"
             android:exported="true"
